<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoginWithRetrofit</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_name">Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_upload_image">Upload Image</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="view_user">View User</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="update_profile">Update</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>

</resources>