<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/navigation_item_view_user"
            android:icon="@drawable/view_user"
            android:title="@string/view_user"/>
        <item
            android:id="@+id/navigation_item_edit"
            android:icon="@drawable/edit"
            android:title="@string/edit_profile"/>
        <item
            android:id="@+id/navigation_item_change_password"
            android:icon="@drawable/reset_password"
            android:title="@string/change_password"/>
        <item
            android:id="@+id/navigation_item_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"/>
    </group>

</menu>